# RESPLE

./: .gitignore  Dockerfile  GPT Request debug Resple no output.txt  GTP Request adapt Resple and mapping.txt  README.md  Todo  entrypoint.sh
HAP360_msgs/: package.xml
Mid70Avia_msgs/: CMakeLists.txt  package.xml
estimate_msgs/: package.xml
resple/: CMakeLists.txt  Todo  package.xml
resple/config/: config.rviz  config_airy96.yaml  config_dog.yaml  config_eee02.yaml  config_heap_testsite_hoenggerberg.yaml  config_helmdyn01.yaml  config_jungfraujoch_tunnel_small.yaml
resple/include/: Estimator.h
resple/include/ikd-Tree/: ikd_Tree.cpp
resple/include/utils/: common_utils.h  math_tools.h
resple/launch/: resple_dog.launch.py  resple_helmdyn01.launch.py
resple/src/: Mapping.cpp  RESPLE.cpp
src/HAP360_msgs/: CMakeLists.txt
src/estimate_msgs/: CMakeLists.txt
src/estimate_msgs/msg/: Calib.msg  Knot.msg  Spline.msg
src/install/: local_setup.sh  setup.sh
src/install/include/rslidar_msg/rslidar_msg/msg/detail/: rslidar_packet__builder.hpp  rslidar_packet__functions.c  rslidar_packet__rosidl_typesupport_fastrtps_c.h  rslidar_packet__rosidl_typesupport_fastrtps_cpp.hpp  rslidar_packet__struct.h  rslidar_packet__struct.hpp  rslidar_packet__traits.hpp  rslidar_packet__type_support.c  rslidar_packet__type_support.cpp
src/install/share/ament_index/resource_index/rosidl_interfaces/: rslidar_msg
src/install/share/rslidar_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/share/rslidar_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rslidar_msg__rosidl_generator_cExport-noconfig.cmake  export_rslidar_msg__rosidl_generator_cExport.cmake  export_rslidar_msg__rosidl_generator_cppExport.cmake  export_rslidar_msg__rosidl_generator_pyExport-noconfig.cmake  export_rslidar_msg__rosidl_generator_pyExport.cmake  export_rslidar_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_rslidar_msg__rosidl_typesupport_fastrtps_cExport.cmake  export_rslidar_msg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_rslidar_msg__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  rslidar_msgConfig.cmake  rslidar_msg__rosidl_typesupport_cExport-noconfig.cmake  rslidar_msg__rosidl_typesupport_cExport.cmake  rslidar_msg__rosidl_typesupport_cppExport-noconfig.cmake  rslidar_msg__rosidl_typesupport_cppExport.cmake  rslidar_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  rslidar_msg__rosidl_typesupport_introspection_cExport.cmake  rslidar_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rslidar_msg__rosidl_typesupport_introspection_cppExport.cmake
src/install/share/rslidar_msg/msg/: RslidarPacket.idl
src/resple/: CMakeLists.txt  package.xml
src/resple/config/: config_airy96.yaml  config_ntu_day_01.yaml
src/resple/include/: Association.h  SplineState.h
src/resple/launch/: resple_airy96.launch.py  resple_eee_02.launch.py  resple_heap_testsite_hoenggerberg.launch.py  resple_jungfraujoch_tunnel_small.launch.py  resple_ntu_day_01.launch.py  resple_r_campus.launch.py
src/resple/src/: Mapping.cpp  RESPLE.cpp
