<?xml version="1.0"?>
<package format="3">
  <name>livox_ros_driver2</name>
  <version>0.0.1</version>
  <description>livox interface for livox ros2 driver</description>
  <maintainer email="dev@livoxtech.com">feng</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
