<?xml version="1.0"?>
<package format="3">
  <name>estimate_msgs</name>
  <version>0.0.0</version>
  <description>The estimate_msgs package</description>

  <maintainer email="ziyu.cao@liu.se">Ziyu Cao</maintainer>
  <license>GPLv3</license>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
