<?xml version="1.0"?>
<package format="3">
  <name>resple</name>
  <version>0.0.0</version>

  <description>RESPLE</description>
  <license>GPLv3</license>
  <author>Ziyu Cao</author>
  <author>William Talbot</author>
  <author>Kailai Li</author>
  <maintainer email="ziyu.cao@liu.se">Ziyu Cao</maintainer>
  <maintainer email="kailai.li@rug.nl">Kailai Li</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dépendances de build -->
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>livox_interfaces</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>livox_ros_driver2</build_depend>
  <build_depend>estimate_msgs</build_depend>
  <!-- Ajouté pour PCL et conversions -->
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <!-- Ajouté pour le SDK RoboSense -->
  <build_depend>rslidar_sdk</build_depend>
  <!-- dépendances de build essentielles -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- dépendances pour les launch files -->
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <!-- Dépendances d’exécution -->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>livox_interfaces</exec_depend>
  <exec_depend>livox_ros_driver</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>estimate_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>rslidar_sdk</exec_depend>
  <!-- runtime pour lancer via ros2 launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
